--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.14",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.5.1",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
