--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
